@@ -2,7 +2,7 @@
 README for glBSP
 ================
 
-by Andrew Apted. 30th August 2002.
+by Andrew Apted. 2nd August 2002.
 
 
 Introduction
@@ -73,7 +73,7 @@ Contact
 Questions, bug reports, suggestions, etc... about glBSP should be
 sent to the following email address:
 
-   glbsp-public@lists.sourceforge.net
+   glbsp-public@lists.sourceforge.net   
 
 
 Links
@@ -88,11 +88,11 @@ The "GL Friendly Nodes" specifications can be found here:
 The EDGE homepage can be found here:
    http://edge.sourceforge.net/
 
-The JDOOM homepage is here:
-   http://www.newdoom.com/jdoom
+The DoomsDay (JDOOM) homepage is here:
+   http://www.doomsdayhq.com/
 
 The Doom3D site can be found here:
-   http://www.redrival.com/fudgefactor/doom3d.html
+   http://doomworld.com/doom3d/
 
 Look here for PrBOOM:
    http://prboom.sourceforge.net/
@@ -134,7 +134,7 @@ Raphael Quinet, for DEU and the original idea.
 id Software, for not only creating such an irresistable game, but
 releasing the source code for so much of their stuff.
 
-... and everyone else who deserves it !
+... and everyone else who deserves it ! 
 
 
 
