@@ -2,6 +2,8 @@
 TODO
 ====
 
++  TEST: current makefile.bcc under windows.
+
 +  document new "fresh" option (cmdline & GUI versions).
 
 -  glBSPX: Fix modal windows not having close buttons in Win32.
